<resources>
    <string name="app_name">sanjia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Play">Play</string>
    <string name="Ummmmm">Ummmmm</string>
    <string name="IM">I AM BACK</string>
    <string name="BT">To BlueTooth</string>
    <string name="PD">Pair Devices</string>
    <string name="signal1">Blue</string>
    <string name="signal2">Red</string>
    <string name="signal3">Wave</string>
    <string name="signal4">Spark</string>
    <string name="signal5">Grey</string>
    <string name="yutian">Rainy</string>
    <string name="feng">Windy</string>
</resources>
